fix: invisible select options
While refactoring white background was replaced with white text color
unfortunately.

--- a/src/components/molecules/custom-select/custom-select.scss
+++ b/src/components/molecules/custom-select/custom-select.scss
@@ -50,7 +50,7 @@
     }
 
     &__option {
-      @apply px-16 py-8 text-white;
+      @apply bg-white px-16 py-8;
 
       &:first-of-type {
         @apply p-40 text-text-light;
